--- a/special.html
+++ b/special.html
@@ -83,7 +83,7 @@
             expressionBox.innerHTML = `
                 <span style="color: #ff6347;">Special</span> + 
                 <span style="color: #32cd32;">10</span> = 
-                <span style="color: #ff6347;">1812</span> = 
+                <span style="color: #ff6347;">1812</span>
                 <span style="color: #ff69b4;">18 DEC</span>`;
             toggleBox.innerHTML = '';
             toggleBox.style.backgroundColor = 'transparent';
